--- a/food_delivery_app/pubspec.yaml
+++ b/food_delivery_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
 
   easy_search_bar: ^2.5.0
   input_quantity: ^2.3.2
+  animated_search_bar: ^2.7.1
   
   flutter:
     sdk: flutter
