--- a/food_delivery_app/pubspec.yaml
+++ b/food_delivery_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cart_stepper: ^4.3.0
   animated_search_bar: ^2.7.1
   firebase_core: ^2.24.0
+  firebase_auth: ^4.16.0
   
   flutter:
     sdk: flutter
