--- a/food_delivery_app/pubspec.yaml
+++ b/food_delivery_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   animated_search_bar: ^2.7.1
   firebase_core: ^2.24.0
   firebase_auth: ^4.16.0
+  google_sign_in: ^6.2.1
   
   flutter:
     sdk: flutter
