--- a/food_delivery_app/pubspec.yaml
+++ b/food_delivery_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_core: ^2.24.0
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
+  flutter_facebook_auth: ^7.1.0
   
   flutter:
     sdk: flutter
