--- a/food_delivery_app/pubspec.yaml
+++ b/food_delivery_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.1.0
+  shared_preferences: ^2.2.3
   
   flutter:
     sdk: flutter
