--- a/food_delivery_app/pubspec.yaml
+++ b/food_delivery_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   animated_search_bar: ^2.7.1
   firebase_core: ^2.24.0
   firebase_auth: ^4.16.0
+  firebase_storage: ^12.3.3
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.1.0
   shared_preferences: ^2.2.3
