--- a/food_delivery_app/pubspec.yaml
+++ b/food_delivery_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.1.0
   shared_preferences: ^2.2.3
+  image_picker: ^1.0.4
   
   flutter:
     sdk: flutter
