--- a/food_delivery_app/pubspec.yaml
+++ b/food_delivery_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.2.3
   image_picker: ^1.0.4
   delightful_toast: ^1.1.0
+  lottie: ^3.1.2
   
   flutter:
     sdk: flutter
