--- a/food_delivery_app/pubspec.yaml
+++ b/food_delivery_app/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   image_picker: ^1.0.4
   delightful_toast: ^1.1.0
   lottie: ^3.1.2
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  http: ^1.1.0
   
   flutter:
     sdk: flutter
