--- a/food_delivery_app/android_backup/settings.gradle
+++ b/food_delivery_app/android_backup/settings.gradle
@@ -12,9 +12,8 @@ pluginManagement {
 
     plugins {
         id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
+        id "com.android.application" version "8.3.0" apply false
     }
 }
 
 include ":app"
-
-apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
